--- a/.gitignore
+++ b/.gitignore
@@ -76,7 +76,8 @@ target/
 .ipynb_checkpoints/
 
 # exclude data from source control by default
-/data/
+/data/raw/
+/data/interim/
 
 # Mac OS-specific storage files
 .DS_Store
@@ -87,3 +88,7 @@ target/
 
 # Mypy cache
 .mypy_cache/
+
+# environment
+.venv/
+/run_information.json
