--- a/dvc.yaml
+++ b/dvc.yaml
@@ -3,18 +3,33 @@ stages:
     cmd: python ./src/data/data_ingestion.py
     deps:
       - ./src/data/data_ingestion.py
-
+    outs:
+      - ./data/interim/df_without_outliers.csv:
+          cache: false
+  split_data:
+    cmd: python ./src/data/split_data.py
+    deps:
+      - ./src/data/split_data.py
+      - ./data/interim/df_without_outliers.csv
+    outs:
+      - ./data/interim/train_raw.csv:
+          cache: false
+      - ./data/interim/test_raw.csv:
+          cache: false
   extract_features:
     cmd: python ./src/features/extract_features.py
     deps: 
       - ./src/features/extract_features.py
+      - ./data/interim/train_raw.csv
+      - ./data/interim/test_raw.csv
     params: 
       - extract_features.mini_batch_kmeans.n_clusters
       - extract_features.mini_batch_kmeans.n_init
       - extract_features.mini_batch_kmeans.random_state
       - extract_features.ewma.alpha
     outs:
-      - ./data/processed/resampled_data.csv
+      - ./data/processed/resampled_data.csv:
+          cache: false
       - ./models/scaler.joblib
       - ./models/mb_kmeans.joblib
 
